# data_profiler

./: .gitignore  README.md  pyproject.toml
docs/: ARTIFACS.md  LOGGING_CONTRACT.md
src/dpdd/: cli.py  log_json.py  profiler.py
src/dpdd/core_utils/: io_helpers.py
tests/: test_cli_smoke.py  utils.py
